--- a/source/less/components/bio-data.less
+++ b/source/less/components/bio-data.less
@@ -1,4 +1,9 @@
 // Начните писать стили здесь
+.bio-data {
+  @media (min-width: @laptop) {
+    margin-top: 50px;
+  }
+}
 
 .bio-data__title {
   font-size: 36px;
@@ -6,11 +11,21 @@
   font-weight: 400;
   margin-top: 27px;
   margin-bottom: 37px;
+  width: 280px;
+  margin-left: auto;
+  margin-right: auto;
 
   @media (min-width: @tablet) {
     font-size: 60px;
     line-height: 60px;
     font-weight: 400;
+    padding-left: 70px;
+    width: 698px;
+  }
+
+  @media (min-width: @laptop) {
+    padding-left: 110px;
+    width: 1330px;
   }
 }
 
@@ -22,11 +37,22 @@
   text-transform: uppercase;
   width: 226px;
   margin-bottom: 39px;
+  padding-left: 20px;
+  width: 300px;
+  margin-left: auto;
+  margin-right: auto;
 
   @media (min-width: @tablet) {
     font-size: 20px;
     line-height: 30px;
     font-weight: 400;
     width: 323px;
+    padding-left: 70px;
+    width: 698px;
+  }
+
+  @media (min-width: @laptop) {
+    padding-left: 110px;
+    width: 1330px;
   }
 }
