--- a/source/less/components/bio-data.less
+++ b/source/less/components/bio-data.less
@@ -21,11 +21,14 @@
     font-weight: 400;
     padding-left: 70px;
     width: 698px;
+    margin-top: 42px;
+    margin-bottom: 55px;
   }
 
   @media (min-width: @laptop) {
     padding-left: 110px;
     width: 1330px;
+    margin-top: 75px;
   }
 }
 
@@ -49,6 +52,7 @@
     width: 323px;
     padding-left: 70px;
     width: 698px;
+    margin-top: 0;
   }
 
   @media (min-width: @laptop) {
